# learn-webgpu-rs

./: .gitignore
tutorial-window/: Cargo.toml
tutorial-window/src/: app.rs  lib.rs  main.rs
tutorial-window/src/graphics/: gpu.rs  mod.rs  render_encoder.rs  render_pass.rs  render_target.rs
tutorial-window/src/graphics/shader/: triangle.wgsl
