[package]
name = "tutorial-window"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.11.6"
log = "0.4.22"
wgpu = "23.0.1"
winit = { version = "0.30.7", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "23.0.1", features = ["webgl"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["Document", "Window", "Element"] }

[lib]
crate-type = ["cdylib", "rlib"]
